[gd_scene load_steps=17 format=2]

[ext_resource path="res://fonts/convo.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ConvoScene.gd" type="Script" id=2]
[ext_resource path="res://madtalk/madtalk_runtime.gd" type="Script" id=3]
[ext_resource path="res://fonts/convo_bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://3d/Room.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/convo_box.png" type="Texture" id=6]
[ext_resource path="res://assets/mugshots/placeholder.png" type="Texture" id=7]
[ext_resource path="res://madtalk/CharacterData.gd" type="Script" id=8]
[ext_resource path="res://assets/mugshots/liadan2_default.png" type="Texture" id=9]
[ext_resource path="res://assets/mugshots/ciara_default.png" type="Texture" id=10]
[ext_resource path="res://audio/ambience.ogg" type="AudioStream" id=11]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Sleep"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Resource" id=1]
script = ExtResource( 8 )
id = "ciara"
name = "Ciara"
avatar = ExtResource( 10 )
variants = {
}

[sub_resource type="Resource" id=2]
script = ExtResource( 8 )
id = "liadan"
name = "LÃ­adan"
avatar = ExtResource( 9 )
variants = {
}

[node name="ConvoScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.258824, 0.368627, 1 )

[node name="TextureRect_Viewport" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 3 )
expand = true
stretch_mode = 6
flip_v = true

[node name="DialogueBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -130.0
margin_right = 210.0
margin_bottom = -33.0
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Dialogue" type="RichTextLabel" parent="DialogueBox"]
margin_left = 88.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 88.0
custom_colors/default_color = Color( 0.964706, 0.776471, 0.658824, 1 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Come on, this is way too easy! When am I going to learn how to turn people into frogs? ...You [b]can[/b] turn people into frogs, right?"
text = "Come on, this is way too easy! When am I going to learn how to turn people into frogs? ...You can turn people into frogs, right?"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="Mugshot" type="TextureRect" parent="DialogueBox"]
margin_left = 16.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 72.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CharName" type="Label" parent="DialogueBox"]
margin_left = 16.0
margin_top = 75.0
margin_right = 80.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0.964706, 0.776471, 0.658824, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Ciara"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MadTalkEffects" type="AnimationPlayer" parent="."]
root_node = NodePath("../FadeBlack")
anims/RESET = SubResource( 4 )
anims/Sleep = SubResource( 5 )

[node name="FadeBlack" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
size_override_stretch = true

[node name="Room" parent="Viewport" instance=ExtResource( 5 )]

[node name="MadTalk" type="Node" parent="."]
script = ExtResource( 3 )
ListOfCharacters = [ SubResource( 1 ), SubResource( 2 ) ]
DialogMainControl = NodePath("../DialogueBox")
DialogMessageBox = NodePath("../DialogueBox")
DialogMessageLabel = NodePath("../DialogueBox/Dialogue")
DialogSpeakerLabel = NodePath("../DialogueBox/CharName")
DialogSpeakerAvatar = NodePath("../DialogueBox/Mugshot")
EffectsAnimationPlayer = NodePath("../MadTalkEffects")

[node name="Audio_VoiceClip" type="AudioStreamPlayer" parent="."]
bus = "VoiceActing"

[node name="Audio_SoundEffect" type="AudioStreamPlayer" parent="."]
bus = "SoundFX"

[node name="Audio_Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
bus = "SoundFX"

[connection signal="activate_custom_effect" from="MadTalk" to="." method="_on_MadTalk_activate_custom_effect"]
[connection signal="dialog_finished" from="MadTalk" to="." method="_on_MadTalk_dialog_finished"]
[connection signal="voice_clip_requested" from="MadTalk" to="." method="_on_MadTalk_voice_clip_requested"]
